name:           BiobaseInfernal
version:        0.8.1.0
author:         Christian Hoener zu Siederdissen
maintainer:     choener@bioinf.uni-leipzig.de
homepage:       https://github.com/choener/BiobaseInfernal
bug-reports:    https://github.com/choener/BiobaseInfernal/issues
copyright:      Christian Hoener zu Siederdissen, 2011 - 2016
category:       Bioinformatics
license:        GPL-3
license-file:   LICENSE
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.10.0
tested-with:    GHC == 7.8.4, GHC == 7.10.3
synopsis:       Infernal data structures and tools
description:
                Provides import and export facilities for Infernal/Rfam data
                formats. We include Stockholm, CM, verbose Infernal results,
                and tabulated Infernal results. Some small tools are included.
                .
                The VerboseHit format is slightly extended to allow simple
                annotations. This extension should be backward-compatible with
                standard-compliant parsers.
                .
                The @cmsearchFilter@ program provides filtering and coloring
                options.



extra-source-files:
  changelog.md
  README.md



library
  build-depends: base                 >= 4.7      &&  < 4.9
               , ADPfusion            >= 0.5.1    &&  < 0.5.2
               , aeson                >= 0.8.1    &&  < 0.11
               , attoparsec           >= 0.12     &&  < 0.14
               , binary               >= 0.7      &&  < 0.8
               , BiobaseTypes         >= 0.1.2    &&  < 0.2
               , BiobaseXNA           >= 0.9.2    &&  < 0.9.3
               , bytestring
               , cereal               >= 0.4      &&  < 0.5
               , cereal-text          >= 0.1      &&  < 0.2
               , conduit              >= 1.2      &&  < 1.3
               , conduit-extra        >= 1.1      &&  < 1.2
               , containers
               , data-default         >= 0.5      &&  < 0.6
               , deepseq              >= 1.4      &&  < 1.5
               , filepath             >= 1.3      &&  < 1.5
               , hashable             >= 1.2      &&  < 1.3
               , lens                 >= 4.0      &&  < 5.0
               , primitive            >= 0.5      &&  < 0.7
               , PrimitiveArray       >= 0.6.1.1  &&  < 0.7.1
               , resourcet            >= 1.1      &&  < 1.2
               , strict               >= 0.3      &&  < 0.4
               , stringable           >= 0.1      &&  < 0.2
               , text                 >= 1.0      &&  < 1.3
               , text-binary          >= 0.1      &&  < 0.3
               , transformers
               , tuple                >= 0.3      &&  < 0.4
               , unordered-containers >= 0.2      &&  < 0.3
               , vector               >= 0.10     &&  < 0.12
               , vector-th-unbox      >= 0.2      &&  < 0.3
               , zlib                 >= 0.6      &&  < 0.7

  exposed-modules:
    Biobase.SElab.CM
    Biobase.SElab.CM.ADP.Fusion
    Biobase.SElab.CM.Import
    Biobase.SElab.CM.Types
    Biobase.SElab.Common.Parser
    Biobase.SElab.HMM
    Biobase.SElab.HMM.Import
    Biobase.SElab.HMM.Types
    Biobase.SElab.Taxonomy
    Biobase.SElab.Taxonomy.Import
  default-language:
    Haskell2010
  default-extensions: BangPatterns
                    , DataKinds
                    , DeriveGeneric
                    , FlexibleContexts
                    , FlexibleInstances
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , LambdaCase
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , OverloadedStrings
                    , ParallelListComp
                    , PatternSynonyms
                    , RankNTypes
                    , RecordWildCards
                    , ScopedTypeVariables
                    , TemplateHaskell
                    , TupleSections
                    , TypeFamilies
                    , TypeOperators
                    , TypeSynonymInstances
                    , UndecidableInstances
  ghc-options:
    -O2 -funbox-strict-fields



-- provides advanced cmsearch hit filtering functionality.

executable cmsearchFilter
  build-depends: base
               , BiobaseInfernal
               , cmdargs          == 0.10.*
  hs-source-dirs:
    src
  main-is:
    cmsearchFilter.hs
  default-language:
    Haskell2010
  ghc-options:
    -O2



benchmark BenchmarkBiobaseInfernal
  type:
    exitcode-stdio-1.0
  build-depends: base
               , BiobaseInfernal
               , criterion        >= 1.1.0.0    && < 1.2
  hs-source-dirs:
    tests
  main-is:
    CriterionInfernal.hs
  default-language:
    Haskell2010
  ghc-options:
    -O2



benchmark StreamBenchmark
  type:
    exitcode-stdio-1.0
  build-depends: base
               , ADPfusion
               , BiobaseInfernal
               , BiobaseTypes
               , BiobaseXNA
               , criterion
               , PrimitiveArray
               , vector
  hs-source-dirs:
    tests
  main-is:
    StreamBenchmark.hs
  default-language:
    Haskell2010
  default-extensions: BangPatterns
                    , DataKinds
                    , ScopedTypeVariables
                    , TypeOperators
  ghc-options:
    -O2
    -ddump-to-file
    -ddump-simpl
--    -dsuppress-all
    -dsuppress-uniques
    -dsuppress-idinfo
    -dsuppress-module-prefixes
    -dsuppress-type-signatures
    -dsuppress-type-applications
    -dsuppress-coercions
    -flate-dmd-anal
    -funbox-strict-fields



test-suite properties
  type:
    exitcode-stdio-1.0
  main-is:
    properties.hs
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:
    tests
  default-language:
    Haskell2010
  default-extensions: OverloadedStrings
                    , ScopedTypeVariables
                    , TemplateHaskell
  build-depends: base
               , BiobaseInfernal
               , HUnit                        >= 1.2  && < 1.4
               , lens
               , QuickCheck
               , test-framework               >= 0.8  && < 0.9
               , test-framework-hunit         >= 0.3  && < 0.4
               , test-framework-quickcheck2   >= 0.3  && < 0.4
               , test-framework-th            >= 0.2  && < 0.3



source-repository head
  type: git
  location: git://github.com/choener/BiobaseInfernal

